# kryst

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: direct_vs_faer.rs
examples/: dense_direct.rs
references/: check.md
src/: error.rs  lib.rs
src/config/: mod.rs  options.rs
src/context/: ksp_context.rs  mod.rs  pc_context.rs
src/core/: mod.rs  traits.rs  wrappers.rs
src/matrix/: dense.rs  mod.rs  sparse.rs
src/parallel/: mod.rs  mpi_comm.rs  rayon_comm.rs
src/preconditioner/: amg.rs  approxinv.rs  asm.rs  block_jacobi.rs  chebyshev.rs  ilu.rs  ilup.rs  ilut.rs  jacobi.rs  mod.rs  sor.rs
src/solver/: bicgstab.rs  cg.rs  cgnr.rs  cgs.rs  direct_lu.rs  fgmres.rs  gmres.rs  minres.rs  mod.rs  pca_gmres.rs  pcg.rs  qmr.rs  tfqmr.rs
src/utils/: coloring.rs  convergence.rs  mod.rs
tests/: core_dense.rs  preconditioner_integration.rs  preconditioner_sor.rs  solver_iterative.rs
