[package]
name = "kryst"
version = "0.5.0"
edition = "2024"

[dependencies]
faer = "0.22.6"
num-traits = "0.2"
thiserror = "1.0"
bitflags = "2.9.1"
rayon = { version = "1.0", optional = true }
mpi = { version = "0.8", optional = true }
num_cpus = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.8"
approx = "0.5"
criterion = "0.4"

[features]
default = ["rayon"]
rayon = ["dep:rayon", "dep:num_cpus"]
mpi = ["dep:mpi"]
