[package]
name = "kryst"
version = "0.5.0"
edition = "2024"
description = "Krylov subspace and preconditioned iterative solvers for dense and sparse linear systems, with shared and distributed memory parallelism."
license = "MIT"
authors = ["Thomas James Mathis <tmathis720@gmail.com>"]
repository = "https://github.com/tmathis720/kryst"
documentation = "https://docs.rs/kryst"
homepage = "https://github.com/tmathis720/kryst"
readme = "README.md"
categories = ["science", "mathematics", "algorithms", "parallel", "linear-algebra"]
keywords = ["krylov", "gmres", "linear-solver", "parallel", "mpi"]

[dependencies]
faer = "0.22.6"
num-traits = "0.2"
thiserror = "1.0"
bitflags = "2.9.1"
rayon = { version = "1.0", optional = true }
mpi = { version = "0.8", optional = true }
num_cpus = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.8"
approx = "0.5"
criterion = "0.4"

[features]
default = ["rayon"]
rayon = ["dep:rayon", "dep:num_cpus"]
mpi = ["dep:mpi"]
